--- a/cells/workstations/homeProfiles/waybar/__backup/__style.css
+++ b/cells/workstations/homeProfiles/waybar/__backup/__style.css
@@ -20,7 +20,7 @@
 /*#131313*/
 
 * {
-  font-family: "Iosevka q SemiBold", "Symbols Nerd Font", monospace;
+  font-family: "Iosevka q Semibold", "Symbols Nerd Font", monospace;
   font-weight: bold;
   min-height: 0px;
   font-size: 98%;
