--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: monospace;
+    font-family: 'Iosevka', 'Noto Sans CJK';
     font-size: 13px;
     min-height: 0;
     margin: 0;
