--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,8 +3,8 @@
   border-radius: 0;
   font-family: "Iosevka", "Symbols Nerd Font", "Noto Sans CJK JP", sans-serif;
   font-size: 13px;
-  font-weight: 600;
   /* semibold */
+  font-weight: 600;
   min-height: 0;
 }
 
@@ -15,6 +15,7 @@ window#waybar {
 
 #workspaces button,
 #window,
+#idle_inhibitor,
 #network,
 #pulseaudio,
 #battery,
@@ -47,6 +48,18 @@ window#waybar {
 #window {
   background-color: transparent;
   color: #a9b1d6;
+}
+
+#idle_inhibitor {
+  background-color: #f7768e;
+  color: #16161e;
+  padding: 0 10px;
+  margin: 0;
+}
+
+#idle_inhibitor.activated {
+  background-color: #ff9e64;
+  color: #16161e;
 }
 
 #network {
